Enable logging of default values for nucleo module

--- a/assets/default_conf.yml
+++ b/assets/default_conf.yml
@@ -115,6 +115,34 @@ NUCLEO-G071RB:
     USE_SMART_BUILD: ['no']
     USE_VERBOSE_COMPILE: ['no']
 NUCLEO-L476RG:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_NONE]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['false']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: [MODULE_OS_GPIOEVENTFLAG_USERBUTTON]
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['false']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['false']
+    OS_CFG_SSSP_MASTER: ['false']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['false']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['false']
+    OS_CFG_SSSP_STACK_START: ['false']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
   GlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
