--- a/assets/default_conf.yml
+++ b/assets/default_conf.yml
@@ -1,5 +1,33 @@
 DiWheelDrive_1-1:
-  GlobalOption:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_AMiRoBLT]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['true']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: ['0']
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['true']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['true']
+    OS_CFG_SSSP_MASTER: ['false']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['true']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['false']
+    OS_CFG_SSSP_STACK_START: ['true']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
@@ -13,7 +41,35 @@ DiWheelDrive_1-1:
     USE_SMART_BUILD: ['no']
     USE_VERBOSE_COMPILE: ['no']
 DiWheelDrive_1-2:
-  GlobalOption:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_AMiRoBLT]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['true']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: ['0']
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['true']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['true']
+    OS_CFG_SSSP_MASTER: ['false']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['true']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['false']
+    OS_CFG_SSSP_STACK_START: ['true']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
@@ -27,7 +83,35 @@ DiWheelDrive_1-2:
     USE_SMART_BUILD: ['no']
     USE_VERBOSE_COMPILE: ['no']
 LightRing_1-0:
-  GlobalOption:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_AMiRoBLT]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['true']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: ['0']
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['true']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['true']
+    OS_CFG_SSSP_MASTER: ['false']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['true']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['true']
+    OS_CFG_SSSP_STACK_START: ['false']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
@@ -41,7 +125,35 @@ LightRing_1-0:
     USE_SMART_BUILD: ['no']
     USE_VERBOSE_COMPILE: ['no']
 LightRing_1-2:
-  GlobalOption:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_AMiRoBLT]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['true']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: ['0']
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['true']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['true']
+    OS_CFG_SSSP_MASTER: ['false']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['true']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['true']
+    OS_CFG_SSSP_STACK_START: ['false']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
@@ -54,10 +166,38 @@ LightRing_1-2:
     USE_PROCESS_STACKSIZE: ['0x400']
     USE_SMART_BUILD: ['no']
     USE_VERBOSE_COMPILE: ['no']
-  UserOption:
+  MakeUserOption:
     UDEFS: [-DBOARD_BREAKOUT_MODULE=$(BOARD_BREAKOUT_MODULE)]
 NUCLEO-F103RB:
-  GlobalOption:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_NONE]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['false']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: [MODULE_OS_GPIOEVENTFLAG_USERBUTTON]
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['false']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['false']
+    OS_CFG_SSSP_MASTER: ['false']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['false']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['false']
+    OS_CFG_SSSP_STACK_START: ['false']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
@@ -70,10 +210,38 @@ NUCLEO-F103RB:
     USE_PROCESS_STACKSIZE: ['0x400']
     USE_SMART_BUILD: ['no']
     USE_VERBOSE_COMPILE: ['no']
-  UserOption:
+  MakeUserOption:
     UDEFS: [-DBOARD_DW1000_CONNECTED=$(BOARD_DW1000_CONNECTED)]
 NUCLEO-F401RE:
-  GlobalOption:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_NONE]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['false']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: [MODULE_OS_GPIOEVENTFLAG_USERBUTTON]
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['false']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['false']
+    OS_CFG_SSSP_MASTER: ['false']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['false']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['false']
+    OS_CFG_SSSP_STACK_START: ['false']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
@@ -87,7 +255,35 @@ NUCLEO-F401RE:
     USE_SMART_BUILD: ['no']
     USE_VERBOSE_COMPILE: ['no']
 NUCLEO-F767ZI:
-  GlobalOption:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_NONE]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['false']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: [MODULE_OS_GPIOEVENTFLAG_USERBUTTON]
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['false']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['false']
+    OS_CFG_SSSP_MASTER: ['false']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['false']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['false']
+    OS_CFG_SSSP_STACK_START: ['false']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
@@ -101,7 +297,35 @@ NUCLEO-F767ZI:
     USE_SMART_BUILD: ['no']
     USE_VERBOSE_COMPILE: ['no']
 NUCLEO-G071RB:
-  GlobalOption:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_NONE]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['false']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: [MODULE_OS_GPIOEVENTFLAG_USERBUTTON]
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['false']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['false']
+    OS_CFG_SSSP_MASTER: ['false']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['false']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['false']
+    OS_CFG_SSSP_STACK_START: ['false']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
@@ -143,7 +367,7 @@ NUCLEO-L476RG:
     OS_CFG_SSSP_STARTUP: ['false']
     OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
     OS_CFG_TESTS_ENABLE: ['true']
-  GlobalOption:
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
@@ -156,10 +380,38 @@ NUCLEO-L476RG:
     USE_PROCESS_STACKSIZE: ['0x400']
     USE_SMART_BUILD: ['no']
     USE_VERBOSE_COMPILE: ['no']
-  UserOption:
+  MakeUserOption:
     UDEFS: [-DBOARD_MPU6050_CONNECTED=$(BOARD_MPU6050_CONNECTED)]
 PowerManagement_1-1:
-  GlobalOption:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_AMiRoBLT]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['true']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: ['0']
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['true']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['true']
+    OS_CFG_SSSP_MASTER: ['true']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['true']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['false']
+    OS_CFG_SSSP_STACK_START: ['false']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
@@ -172,10 +424,38 @@ PowerManagement_1-1:
     USE_PROCESS_STACKSIZE: ['0x400']
     USE_SMART_BUILD: ['no']
     USE_VERBOSE_COMPILE: ['no']
-  UserOption:
+  MakeUserOption:
     UDEFS: [-DBOARD_SENSORRING=$(BOARD_SENSORRING)]
 PowerManagement_1-2:
-  GlobalOption:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_AMiRoBLT]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['true']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: ['0']
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['true']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['true']
+    OS_CFG_SSSP_MASTER: ['true']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['true']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['false']
+    OS_CFG_SSSP_STACK_START: ['false']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
@@ -188,10 +468,38 @@ PowerManagement_1-2:
     USE_PROCESS_STACKSIZE: ['0x400']
     USE_SMART_BUILD: ['no']
     USE_VERBOSE_COMPILE: ['no']
-  UserOption:
+  MakeUserOption:
     UDEFS: [-DBOARD_SENSORRING=$(BOARD_SENSORRING)]
 STM32F407G-DISC1:
-  GlobalOption:
+  AosconfOption:
+    OS_CFG_BOOTLOADER: [AOS_BOOTLOADER_NONE]
+    OS_CFG_DBG: ['true']
+    OS_CFG_FBCAN1_ENABLE: ['false']
+    OS_CFG_FBCAN2_ENABLE: ['false']
+    OS_CFG_FBCAN3_ENABLE: ['false']
+    OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [AMIROOS_CFG_SHELL_LINEWIDTH]
+    OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: [MODULE_OS_GPIOEVENTFLAG_USERBUTTON]
+    OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+    OS_CFG_PROFILE: ['true']
+    OS_CFG_SHELL_ENABLE: ['true']
+    OS_CFG_SHELL_HISTLENGTH: ['3']
+    OS_CFG_SHELL_LINEWIDTH: ['64']
+    OS_CFG_SHELL_MAXARGS: ['8']
+    OS_CFG_SHELL_REMOTE_ENABLE: ['false']
+    OS_CFG_SHELL_STACKSIZE: ['1024']
+    OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+    OS_CFG_SSSP_ENABLE: ['false']
+    OS_CFG_SSSP_MASTER: ['false']
+    OS_CFG_SSSP_MODULEIDWIDTH: ['16']
+    OS_CFG_SSSP_MSI: ['false']
+    OS_CFG_SSSP_SHUTDOWN: ['false']
+    OS_CFG_SSSP_SIGNALDELAY: ['1000']
+    OS_CFG_SSSP_STACK_END: ['false']
+    OS_CFG_SSSP_STACK_START: ['false']
+    OS_CFG_SSSP_STARTUP: ['false']
+    OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
+    OS_CFG_TESTS_ENABLE: ['true']
+  MakeGlobalOption:
     USE_COPT: [-std=c99, -fshort-enums]
     USE_CPPOPT: [-fno-rtti, -std=c++17]
     USE_EXCEPTIONS_STACKSIZE: ['0x400']
