Pass build information and duration to the module

--- a/test/test_suites/controller_tests/Makefile
+++ b/test/test_suites/controller_tests/Makefile
@@ -4,8 +4,9 @@ UDEFS +=
 # Define ASM defines here
 UADEFS +=
 
-
+BUILDDIR +=
 
 test:
 	$(info UDEFS=$(UDEFS))
 	$(info UADEFS=$(UADEFS))
+	$(info UADEFS=$(BUILDDIR))
