Update replacement config, fix Config variable exclusion

--- a/assets/repl_conf.yml
+++ b/assets/repl_conf.yml
@@ -14,28 +14,131 @@ Modules: [
         ]
 Options:
     AosconfOption:
+      # Flag to enable/disable debug API and logic.
       OS_CFG_DBG: ['true', 'false']
-      OS_CFG_FBCAN1_ENABLE: ['true', 'false']
-      # OS_CFG_FBCAN2_ENABLE: ['true', 'false']
-      # OS_CFG_FBCAN3_ENABLE: ['true', 'false']
-      # OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: ['0']
-      # OS_CFG_MAIN_LOOP_TIMEOUT: ['0']
+
+      # Flag to enable/disable unit tests.
+      # Setting this flag will implicitely enable the shell.
+      OS_CFG_TESTS_ENABLE: ['true', 'false']
+
+      # Flag to enable/disable profiling API and logic.
       OS_CFG_PROFILE: ['true', 'false']
-      OS_CFG_SHELL_ENABLE: ['true', 'false']
-      OS_CFG_SHELL_HISTLENGTH: ['0', '3']
-      # OS_CFG_SHELL_LINEWIDTH: ['64']
-      # OS_CFG_SHELL_MAXARGS: ['8']
-      OS_CFG_SHELL_REMOTE_ENABLE: ['true', 'false']
-      # OS_CFG_SHELL_STACKSIZE: ['1024']
-      # OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
-      # OS_CFG_SSSP_ENABLE: ['true', 'false']
-      # OS_CFG_SSSP_MASTER: ['true', 'false']
-      # OS_CFG_SSSP_MODULEIDWIDTH: ['16']
-      # OS_CFG_SSSP_MSI: ['true', 'false']
-      # OS_CFG_SSSP_SHUTDOWN: ['true', 'false']
-      # OS_CFG_SSSP_SIGNALDELAY: ['1000']
-      # OS_CFG_SSSP_STACK_END: ['true', 'false']
-      # OS_CFG_SSSP_STACK_START: ['true', 'false']
-      # OS_CFG_SSSP_STARTUP: ['true', 'false']
-      # OS_CFG_SSSP_SYSSYNCPERIOD: ['1000000']
-      # OS_CFG_TESTS_ENABLE: ['true', 'false']
+
+      # Mask for the control thread to listen to certain GPIO events.
+      # Any mandatory events (e.g. for SSSP) are enabled implicitely despite
+      # this configuration.
+      # OS_CFG_MAIN_LOOP_GPIOEVENT_FLAGSMASK: [MODULE_OS_GPIOEVENTFLAG_USERBUTTON]
+
+      # Timeout value when waiting for events in the main loop in
+      # microseconds.
+      # A value of 0 deactivates the timeout.
+      OS_CFG_MAIN_LOOP_TIMEOUT: [0]
+
+      # Filtered & Buffered CAN (FBCAN) configuration
+
+      # Flag to enable FBCAN for the CANX interface.
+      OS_CFG_FBCAN1_ENABLE: ['true', 'false']
+      OS_CFG_FBCAN2_ENABLE: ['true', 'false']
+      OS_CFG_FBCAN3_ENABLE: ['true', 'false']
+
+      # Size of input buffers for the SerialCANDriver.
+      # Setting this value to 0 diables Serial over CAN API.
+      # It is implicitly set by OS_CFG_SHELL_LINEWIDTH
+      # OS_CFG_FBCAN_SERIAL_BUFFERSIZE: [64]
+
+
+      # SSSP (Startup Shutdown Synchronization Protocol) configuration
+
+      # Flag to enable SSSP.
+      # If disables all other flags are disabled too
+      OS_CFG_SSSP_ENABLE: [false]
+
+      # Flag to indicate, whether the SSSP startup sequence shall be
+      # executed by AMiRo-OS.
+      # This setting must be false in case another software (e.g. a
+      # bootloader) handles the initial stages of the SSSP startup phase.
+      OS_CFG_SSSP_STARTUP: [false]
+
+      # Flag to indicate, whether the SSSP shutdown sequence shall be
+      # executed by AMiRo-OS.
+      # This setting should be false in case another software (e.g. a
+      # bootloader) handles the final stages of the SSSP shutdown phase.
+      OS_CFG_SSSP_SHUTDOWN: [false]
+
+      # Flag to indicate, whether the module stack initialization (MSI;
+      # stage 3 of the SSSP startup phase) shall be executed.
+      # In order to execute MSI, a broadcast bus (BCB) and according
+      # interfaces must be defined.
+      OS_CFG_SSSP_MSI: [false]
+
+      # Width of the @p aos_sssp_moduleid_t type.
+      # Possible settings are 8, 16, 32 and 64.
+      OS_CFG_SSSP_MODULEIDWIDTH: [16]
+
+      # Flag to set the module as SSSP master.
+      # There must be only one module with this flag set to true in a
+      # system.
+      OS_CFG_SSSP_MASTER: [false]
+
+      # Flag to set the module to be the first in the stack.
+      # There must be only one module with this flag set to true in a
+      # system.
+      OS_CFG_SSSP_STACK_START: [false]
+
+      # Flag to set the module to be the last in the stack.
+      # There must be only one module with this flag set to true in a
+      # system.
+      OS_CFG_SSSP_STACK_END: [false]
+
+      # Delay time (in microseconds) how long a SSSP signal must be active.
+      OS_CFG_SSSP_SIGNALDELAY: [1000]
+
+      # Time boundary for robot wide clock synchronization in microseconds.
+      # Whenever the SSSP S (snychronization) signal gets logically
+      # deactivated, all modules need to align their local uptime to the
+      # nearest multiple of this value.
+      # Setting this value to 0 deactivates clock synchronization.
+      OS_CFG_SSSP_SYSSYNCPERIOD: [1000000]
+
+      # System shell options
+
+    OS_CFG_SHELL_ENABLE: [true]
+    OS_CFG_SHELL_STACKSIZE: [1024]
+
+      # Shell thread priority.
+      # Thread priorities are specified as an integer value.
+      # Predefined ranges are:
+        # lowest  ┌ THD_LOWPRIO_MIN
+                # │ ...
+                # └ THD_LOWPRIO_MAX
+                # ┌ THD_NORMALPRIO_MIN
+                # │ ...
+                # └ THD_NORMALPRIO_MAX
+                # ┌ THD_HIGHPRIO_MIN
+                # │ ...
+                # └ THD_HIGHPRIO_MAX
+                # ┌ THD_RTPRIO_MIN
+                # │ ...
+        # highest └ THD_RTPRIO_MAX
+      OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
+
+      # Shell maximum input line length.
+      OS_CFG_SHELL_LINEWIDTH: [64]
+
+      # Shell maximum number of arguments.
+      OS_CFG_SHELL_MAXARGS: [8]
+
+      # Shell number of history entries.
+      # A value of 0 disables shell history.
+      OS_CFG_SHELL_HISTLENGTH: [3]
+
+      # Shell remote access enable flag.
+      # If enabled, AMiRo-OS shells support remote access.
+      OS_CFG_SHELL_REMOTE_ENABLE: [false]
+
+
+Dependencies:
+  OS_CFG_TESTS_ENABLE:
+    with_value: 'true'
+    requires:
+      OS_CFG_SHELL_ENABLE: 'true'
