--- a/templates/repl_conf_aos.yml
+++ b/templates/repl_conf_aos.yml
@@ -24,19 +24,19 @@ Options:
   UrtConf:
 
     # @brief   Allow redefinition during configuration tests.
-    APP_CFG_TEST: [true]
+    APP_CFG_TEST: [true, false]
 
     # Width of the urt_delay_t data type.
     # Possible values are 32 and 64 bits.
     # By definition time is represented in microseconds.
-    URT_CFG_DELAY_WIDTH: [32]
+    URT_CFG_DELAY_WIDTH: [0, 32, 64]
 
     # @brief   Width of the urt_nodestage_t data type.
     # @details Possible values are 8, 16, 32, and 64 bits.
-    URT_CFG_NODESTAGE_WIDTH: [16]
+    URT_CFG_NODESTAGE_WIDTH: [0, 8, 16, 32, 64]
 
     # @brief   Synchronization groups API enable flag.
-    URT_CFG_SYNCGROUPS_ENABLED: [true]
+    URT_CFG_SYNCGROUPS_ENABLED: [true, false]
 
     UrtDebug:
       # @brief   Debug enable flag.
@@ -96,11 +96,11 @@ Options:
 
   AosConfig:
     # Flag to enable/disable debug API and logic.
-    OS_CFG_DBG: ['true']
+    OS_CFG_DBG: [true, false]
 
     # Flag to enable/disable unit tests.
     # Setting this flag will implicitely enable the shell.
-    OS_CFG_TESTS_ENABLE: ['true', 'false']
+    OS_CFG_TESTS_ENABLE: [true, false]
 
     # Flag to enable/disable profiling API and logic.
     OS_CFG_PROFILE: [false]
@@ -113,14 +113,14 @@ Options:
     # Timeout value when waiting for events in the main loop in
     # microseconds.
     # A value of 0 deactivates the timeout.
-    OS_CFG_MAIN_LOOP_TIMEOUT: [0]
+    OS_CFG_MAIN_LOOP_TIMEOUT: [0, 100]
 
     # Filtered & Buffered CAN (FBCAN) configuration
     FilteredBufferedCan:
       # Flag to enable FBCAN for the CANX interface.
-      OS_CFG_FBCAN1_ENABLE: ['true', 'false']
-      OS_CFG_FBCAN2_ENABLE: [false]
-      OS_CFG_FBCAN3_ENABLE: [false]
+      OS_CFG_FBCAN1_ENABLE: [true, false]
+      OS_CFG_FBCAN2_ENABLE: [true, false]
+      OS_CFG_FBCAN3_ENABLE: [true, false]
 
       # Size of input buffers for the SerialCANDriver.
       # Setting this value to 0 diables Serial over CAN API.
@@ -132,44 +132,44 @@ Options:
 
       # Flag to enable SSSP.
       # If disables all other flags are disabled too
-      OS_CFG_SSSP_ENABLE: [false]
+      OS_CFG_SSSP_ENABLE: [true, false]
 
       # Flag to indicate, whether the SSSP startup sequence shall be
       # executed by AMiRo-OS.
       # This setting must be 'false' in case another software (e.g. a
       # bootloader) handles the initial stages of the SSSP startup phase.
-      OS_CFG_SSSP_STARTUP: [false]
+      OS_CFG_SSSP_STARTUP: [true, false]
 
       # Flag to indicate, whether the SSSP shutdown sequence shall be
       # executed by AMiRo-OS.
       # This setting should be false in case another software (e.g. a
       # bootloader) handles the final stages of the SSSP shutdown phase.
-      OS_CFG_SSSP_SHUTDOWN: [false]
+      OS_CFG_SSSP_SHUTDOWN: [true, false]
 
       # Flag to indicate, whether the module stack initialization (MSI;
       # stage 3 of the SSSP startup phase) shall be executed.
       # In order to execute MSI, a broadcast bus (BCB) and according
       # interfaces must be defined.
-      OS_CFG_SSSP_MSI: [false]
+      OS_CFG_SSSP_MSI: [true, false]
 
       # Width of the @p aos_sssp_moduleid_t type.
       # Possible settings are 8, 16, 32 and 64.
-      OS_CFG_SSSP_MODULEIDWIDTH: [16]
+      OS_CFG_SSSP_MODULEIDWIDTH: [true, false]
 
       # Flag to set the module as SSSP master.
       # There must be only one module with this flag set to true in a
       # system.
-      OS_CFG_SSSP_MASTER: [false]
+      OS_CFG_SSSP_MASTER: [true, false]
 
       # Flag to set the module to be the first in the stack.
       # There must be only one module with this flag set to true in a
       # system.
-      OS_CFG_SSSP_STACK_START: [false]
+      OS_CFG_SSSP_STACK_START: [true, false]
 
       # Flag to set the module to be the last in the stack.
       # There must be only one module with this flag set to true in a
       # system.
-      OS_CFG_SSSP_STACK_END: [false]
+      OS_CFG_SSSP_STACK_END: [true, false]
 
       # Delay time (in microseconds) how long a SSSP signal must be active.
       OS_CFG_SSSP_SIGNALDELAY: [1000]
@@ -184,9 +184,9 @@ Options:
     # System shell options
     Shell:
       # Shell enable flag.
-      OS_CFG_SHELL_ENABLE: [true]
+      OS_CFG_SHELL_ENABLE: [true, false]
       # Shell thread stack size.
-      OS_CFG_SHELL_STACKSIZE: [1024]
+      OS_CFG_SHELL_STACKSIZE: [0, 1024]
 
       # Shell thread priority.
       # Thread priorities are specified as an integer value.
@@ -205,15 +205,15 @@ Options:
       # OS_CFG_SHELL_THREADPRIO: [AOS_THD_NORMALPRIO_MIN]
 
       # Shell maximum input line length.
-      OS_CFG_SHELL_LINEWIDTH: [64]
+      OS_CFG_SHELL_LINEWIDTH: [0, 64]
 
       # Shell maximum number of arguments.
-      OS_CFG_SHELL_MAXARGS: [8]
+      OS_CFG_SHELL_MAXARGS: [0, 8]
 
       # Shell number of history entries.
       # A value of 0 disables shell history.
-      OS_CFG_SHELL_HISTLENGTH: [3]
+      OS_CFG_SHELL_HISTLENGTH: [0, 3]
 
       # Shell remote access enable flag.
       # If enabled, AMiRo-OS shells support remote access.
-      # OS_CFG_SHELL_REMOTE_ENABLE: ['false']
+      OS_CFG_SHELL_REMOTE_ENABLE: [true, false]
